force-app/main/default/objects/External_Tickets__c/External_Tickets__c.object-meta.xml
<CustomObject>
    <label>External Tickets</label>
    <nameField>
        <label>External Tickets</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>