force-app/main/default/objects/External_Tickets__c/fields/ACCOUNT_CODE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_CODE__c</fullName>
    <label>ACCOUNT CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>