force-app/main/default/objects/External_Tickets__c/fields/Add_On_Rules__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Rules__c</fullName>
    <inlineHelpText>Need to add extra fare or not</inlineHelpText>
    <label>Add On Rules</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>