force-app/main/default/objects/External_Tickets__c/fields/Agency_Initial__c.field-meta.xml
<CustomField>
    <fullName>Agency_Initial__c</fullName>
    <formula>Account__r.Agency_Short_Name__c</formula>
    <label>Agency Initial</label>
    <type>Text</type>
</CustomField>