force-app/main/default/objects/External_Tickets__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>