force-app/main/default/objects/External_Tickets__c/fields/Applicant_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Company_Code__c</fullName>
    <description>申請人公司代碼</description>
    <inlineHelpText>申請人公司代碼</inlineHelpText>
    <label>Applicant Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>