force-app/main/default/objects/External_Tickets__c/fields/Applicant_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Date_Time__c</fullName>
    <description>申請時間</description>
    <inlineHelpText>申請時間</inlineHelpText>
    <label>Applicant Date Time</label>
    <type>DateTime</type>
</CustomField>