force-app/main/default/objects/External_Tickets__c/fields/Applicant_Dept__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Dept__c</fullName>
    <description>申請人部門代碼</description>
    <inlineHelpText>申請人部門代碼</inlineHelpText>
    <label>Applicant Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>