force-app/main/default/objects/External_Tickets__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>員工姓名</description>
    <inlineHelpText>員工姓名</inlineHelpText>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>