force-app/main/default/objects/External_Tickets__c/fields/Application_Department__c.field-meta.xml
<CustomField>
    <fullName>Application_Department__c</fullName>
    <label>Application Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>