force-app/main/default/objects/External_Tickets__c/fields/Apply_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Apply Date</label>
    <type>Date</type>
</CustomField>