force-app/main/default/objects/External_Tickets__c/fields/Apply_For__c.field-meta.xml
<CustomField>
    <fullName>Apply_For__c</fullName>
    <description>申請對象</description>
    <inlineHelpText>申請對象</inlineHelpText>
    <label>Apply For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>