force-app/main/default/objects/External_Tickets__c/fields/Approved_Document__c.field-meta.xml
<CustomField>
    <fullName>Approved_Document__c</fullName>
    <label>Approved Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>