force-app/main/default/objects/External_Tickets__c/fields/APVL_CODE__c.field-meta.xml
<CustomField>
    <fullName>APVL_CODE__c</fullName>
    <label>APVL CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>