force-app/main/default/objects/External_Tickets__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <description>目的地英文</description>
    <inlineHelpText>目的地英文</inlineHelpText>
    <label>Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>