force-app/main/default/objects/External_Tickets__c/fields/ArrivalID__c.field-meta.xml
<CustomField>
    <fullName>ArrivalID__c</fullName>
    <description>目的地代碼</description>
    <inlineHelpText>目的地代碼</inlineHelpText>
    <label>ArrivalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>