force-app/main/default/objects/External_Tickets__c/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <label>Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>客運</fullName>
            </value>
            <value>
                <fullName>貨運</fullName>
            </value>
            <value>
                <fullName>機場運務</fullName>
            </value>
            <value>
                <fullName>企劃室</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>