force-app/main/default/objects/External_Tickets__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>BatchNumber</label>
    <type>AutoNumber</type>
</CustomField>