force-app/main/default/objects/External_Tickets__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <label>Booking Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>