force-app/main/default/objects/External_Tickets__c/fields/Booking_Class_Returning_External__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class_Returning_External__c</fullName>
    <label>Cabin(Returning)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class</valueSetName>
    </valueSet>
</CustomField>