force-app/main/default/objects/External_Tickets__c/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <formula>Account__r.Business_Number__c</formula>
    <label>Business Number</label>
    <type>Text</type>
</CustomField>