force-app/main/default/objects/External_Tickets__c/fields/Case_No__c.field-meta.xml
<CustomField>
    <fullName>Case_No__c</fullName>
    <label>Case No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>