force-app/main/default/objects/External_Tickets__c/fields/Certificate_Version__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Version__c</fullName>
    <inlineHelpText>列印出的憑證語言</inlineHelpText>
    <label>Certificate Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
                <default>true</default>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>