force-app/main/default/objects/External_Tickets__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>