force-app/main/default/objects/External_Tickets__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>公司或單位名稱</description>
    <inlineHelpText>公司或單位名稱</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>