force-app/main/default/objects/External_Tickets__c/fields/Coupon_Issue_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Issue_Deadline__c</fullName>
    <label>Coupon Issue Deadline</label>
    <type>Date</type>
</CustomField>