force-app/main/default/objects/External_Tickets__c/fields/Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Number__c</fullName>
    <label>Coupon Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>