force-app/main/default/objects/External_Tickets__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>DOB of Passenger</description>
    <inlineHelpText>DOB of Passenger</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>