force-app/main/default/objects/External_Tickets__c/fields/Depature__c.field-meta.xml
<CustomField>
    <fullName>Depature__c</fullName>
    <description>出發地英文</description>
    <inlineHelpText>出發地英文</inlineHelpText>
    <label>Depature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>