force-app/main/default/objects/External_Tickets__c/fields/DepatureID__c.field-meta.xml
<CustomField>
    <fullName>DepatureID__c</fullName>
    <description>出發地代碼</description>
    <inlineHelpText>出發地代碼</inlineHelpText>
    <label>DepatureID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>