force-app/main/default/objects/External_Tickets__c/fields/DiagramID__c.field-meta.xml
<CustomField>
    <fullName>DiagramID__c</fullName>
    <description>BPM流程</description>
    <inlineHelpText>BPM流程</inlineHelpText>
    <label>DiagramID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>