force-app/main/default/objects/External_Tickets__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <formula>IF(
  ISPICKVAL(QuotaManageID__r.Discount__c, &quot;00&quot;), 
  1, 
  VALUE(TEXT(QuotaManageID__r.Discount__c)) / 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>