force-app/main/default/objects/External_Tickets__c/fields/Duration_First_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Duration_First_Travel_Date__c</fullName>
    <label>O/B Not Valid After</label>
    <type>Date</type>
</CustomField>