force-app/main/default/objects/External_Tickets__c/fields/Duration_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Duration_Issue_Date__c</fullName>
    <label>Duration：Issue Date</label>
    <type>Date</type>
</CustomField>