force-app/main/default/objects/External_Tickets__c/fields/Embargo__c.field-meta.xml
<CustomField>
    <fullName>Embargo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embargo</label>
    <type>Checkbox</type>
</CustomField>