force-app/main/default/objects/External_Tickets__c/fields/Embargo_Date_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Embargo_Date_Bulk__c</fullName>
    <description>量票禁運日期</description>
    <label>Embargo 1st travel sector (Bulk)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>