force-app/main/default/objects/External_Tickets__c/fields/Embargo_This_Year_Taiwan_to_World__c.field-meta.xml
<CustomField>
    <fullName>Embargo_This_Year_Taiwan_to_World__c</fullName>
    <label>Embargo：This Year（Taiwan to World）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>