force-app/main/default/objects/External_Tickets__c/fields/Embargo_This_Year_World_to_Taiwan__c.field-meta.xml
<CustomField>
    <fullName>Embargo_This_Year_World_to_Taiwan__c</fullName>
    <label>Embargo：This Year（World to Taiwan）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>