force-app/main/default/objects/External_Tickets__c/fields/ENBOX__c.field-meta.xml
<CustomField>
    <fullName>ENBOX__c</fullName>
    <inlineHelpText>ex. NONEND , No Show Penalty</inlineHelpText>
    <label>ENBOX</label>
    <length>200</length>
    <type>Text</type>
</CustomField>