force-app/main/default/objects/External_Tickets__c/fields/Exemption_Embargo__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Embargo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exemption - Embargo</label>
    <type>Checkbox</type>
</CustomField>