force-app/main/default/objects/External_Tickets__c/fields/Exemption_Tax__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>