force-app/main/default/objects/External_Tickets__c/fields/Exemption_YQ__c.field-meta.xml
<CustomField>
    <fullName>Exemption_YQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YQ</label>
    <type>Checkbox</type>
</CustomField>