force-app/main/default/objects/External_Tickets__c/fields/Exemption_YR__c.field-meta.xml
<CustomField>
    <fullName>Exemption_YR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YR</label>
    <type>Checkbox</type>
</CustomField>