force-app/main/default/objects/External_Tickets__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>憑證兌換效期</description>
    <inlineHelpText>憑證兌換效期</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>