force-app/main/default/objects/External_Tickets__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Extension of person in charge of applying dept</description>
    <inlineHelpText>Extension of person in charge of applying dept</inlineHelpText>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>