force-app/main/default/objects/External_Tickets__c/fields/Fare_Basis_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Fare_Basis_Bulk__c</fullName>
    <label>Fare Basis Bulk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>