force-app/main/default/objects/External_Tickets__c/fields/First_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>First_Name_CN__c</fullName>
    <label>First Name(CN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>