force-app/main/default/objects/External_Tickets__c/fields/Flight_Date_Returning_External__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Returning_External__c</fullName>
    <label>Flight Date Returning External</label>
    <type>Date</type>
</CustomField>