force-app/main/default/objects/External_Tickets__c/fields/Flight_Number_Departure_External__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Departure_External__c</fullName>
    <label>Flight Number Departure External</label>
    <length>255</length>
    <type>Text</type>
</CustomField>