force-app/main/default/objects/External_Tickets__c/fields/Generated__c.field-meta.xml
<CustomField>
    <fullName>Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated</label>
    <type>Checkbox</type>
</CustomField>