force-app/main/default/objects/External_Tickets__c/fields/Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Department__c</fullName>
    <label>Head of Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>