force-app/main/default/objects/External_Tickets__c/fields/Identify__c.field-meta.xml
<CustomField>
    <fullName>Identify__c</fullName>
    <description>表單代碼</description>
    <inlineHelpText>表單代碼</inlineHelpText>
    <label>Identify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>