force-app/main/default/objects/External_Tickets__c/fields/In_Quota__c.field-meta.xml
<CustomField>
    <fullName>In_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Quota</label>
    <type>Checkbox</type>
</CustomField>