force-app/main/default/objects/External_Tickets__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <inlineHelpText>案件編號(自動編碼)</inlineHelpText>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>