force-app/main/default/objects/External_Tickets__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send</fullName>
                <default>true</default>
                <label>Send</label>
            </value>
            <value>
                <fullName>Approve (Inner)</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approve (Final)</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
                <isActive>false</isActive>
                <label>Approve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>