force-app/main/default/objects/External_Tickets__c/fields/Itinerary_Departure__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Departure__c</fullName>
    <label>Itinerary(Departure)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Route</valueSetName>
    </valueSet>
</CustomField>