force-app/main/default/objects/External_Tickets__c/fields/Last_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver_Name__c</fullName>
    <description>最後簽核人</description>
    <inlineHelpText>最後簽核人</inlineHelpText>
    <label>Last Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>