force-app/main/default/objects/External_Tickets__c/fields/Last_ApproverId__c.field-meta.xml
<CustomField>
    <fullName>Last_ApproverId__c</fullName>
    <description>最後簽核人員編</description>
    <inlineHelpText>最後簽核人員編</inlineHelpText>
    <label>Last ApproverId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>