force-app/main/default/objects/External_Tickets__c/fields/N_Net__c.field-meta.xml
<CustomField>
    <fullName>N_Net__c</fullName>
    <label>Net Fare Amount (N Net)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>