force-app/main/default/objects/External_Tickets__c/fields/Notice2__c.field-meta.xml
<CustomField>
    <fullName>Notice2__c</fullName>
    <defaultValue>&quot;The expiration date of the application is three months after approval. Expired application should be void without returning quota.&quot;</defaultValue>
    <description>English</description>
    <inlineHelpText>English</inlineHelpText>
    <label>Notice2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>