force-app/main/default/objects/External_Tickets__c/fields/Notice__c.field-meta.xml
<CustomField>
    <fullName>Notice__c</fullName>
    <defaultValue>&quot;本申請書自申請日起三個月內須完成機票開立作業，逾期失效且不得展延，亦不退回兌換額度。&quot;</defaultValue>
    <description>Mandarin/Chinese</description>
    <inlineHelpText>Mandarin/Chinese</inlineHelpText>
    <label>Notice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>