force-app/main/default/objects/External_Tickets__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Apply Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Tickets</valueSetName>
    </valueSet>
</CustomField>