force-app/main/default/objects/External_Tickets__c/fields/Organizer_Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Event_Title__c</fullName>
    <inlineHelpText>主辦單位/活動名稱</inlineHelpText>
    <label>Organizer / Event Title</label>
    <type>TextArea</type>
</CustomField>