force-app/main/default/objects/External_Tickets__c/fields/Paper_Certificated__c.field-meta.xml
<CustomField>
    <fullName>Paper_Certificated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Certificated</label>
    <type>Checkbox</type>
</CustomField>