force-app/main/default/objects/External_Tickets__c/fields/PFA_No__c.field-meta.xml
<CustomField>
    <fullName>PFA_No__c</fullName>
    <label>PFA No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>