force-app/main/default/objects/External_Tickets__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <label>PIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>