force-app/main/default/objects/External_Tickets__c/fields/PMD__c.field-meta.xml
<CustomField>
    <fullName>PMD__c</fullName>
    <label>PMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>