force-app/main/default/objects/External_Tickets__c/fields/Prizes_and_Awards_won_by_chance__c.field-meta.xml
<CustomField>
    <fullName>Prizes_and_Awards_won_by_chance__c</fullName>
    <label>Prizes and Awards won by chance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>