force-app/main/default/objects/External_Tickets__c/fields/Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>Quota_Type__c</fullName>
    <formula>TEXT(QuotaManageID__r.Type__c)</formula>
    <label>Quota Type</label>
    <type>Text</type>
</CustomField>