force-app/main/default/objects/External_Tickets__c/fields/QuotaManageID__c.field-meta.xml
<CustomField>
    <fullName>QuotaManageID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Manage</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This Quota has been used, please changed another Quota.</errorMessage>
        <filterItems>
            <field>Quota_Manage__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quota_Manage__c</referenceTo>
    <relationshipLabel>External Tickets</relationshipLabel>
    <relationshipName>External_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>