force-app/main/default/objects/External_Tickets__c/fields/RBD__c.field-meta.xml
<CustomField>
    <fullName>RBD__c</fullName>
    <label>RBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RBD</valueSetName>
    </valueSet>
</CustomField>