force-app/main/default/objects/External_Tickets__c/fields/Reason_for_Application__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Application__c</fullName>
    <label>Reason for Application</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>