force-app/main/default/objects/External_Tickets__c/fields/Redeem_Valid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Valid_Start_Date__c</fullName>
    <label>Redeem Valid Start Date</label>
    <type>Date</type>
</CustomField>