force-app/main/default/objects/External_Tickets__c/fields/Redemption_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Completed_Date__c</fullName>
    <label>Redemption Completed Date</label>
    <type>Date</type>
</CustomField>