force-app/main/default/objects/External_Tickets__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>全額退款/退票</description>
    <inlineHelpText>全額退款/退票</inlineHelpText>
    <label>Refund</label>
    <type>Checkbox</type>
</CustomField>