force-app/main/default/objects/External_Tickets__c/fields/RequisitionID__c.field-meta.xml
<CustomField>
    <fullName>RequisitionID__c</fullName>
    <description>表單唯一碼</description>
    <inlineHelpText>表單唯一碼</inlineHelpText>
    <label>RequisitionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>