force-app/main/default/objects/External_Tickets__c/fields/SerialID__c.field-meta.xml
<CustomField>
    <fullName>SerialID__c</fullName>
    <description>表單編號</description>
    <inlineHelpText>表單編號</inlineHelpText>
    <label>BPM No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>